[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "osc-plugin-qam"
dynamic = ["version"]
description = "Plugin for OSC to support the workflow for the QA maintenance department when using the new request / review osc abstractions."
readme = "README.rst"
requires-python = ">=3.9"
license = "GPL-2.0-only"
license-files = ["LICENSE"]
dependencies = [
    "osc",
    "python-dateutil",
    "prettytable",
    "requests",
]

[project.urls]
Homepage = "https://gitlab.suse.de/qa-maintenance/qam-oscplugin"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "ruff",
    "responses",
    "ty",
]

[tool.setuptools.dynamic]
version = { attr = "oscqam.__version__" }

[tool.setuptools.packages.find]
exclude = ["tests*", "Documentation"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.format]

[tool.ty.environment]
python-version = "3.9"

[tool.ty.src]
include = ["oscqam"]
